# ESP32-Touch-Display-REAPER-Advanced-Metering-and-Transport-Controller

./: .gitignore  README.md  build_and_run.bat  build_installer.bat  build_installer_log.txt  build_log.txt  esp32_verify.ps1  flash_esp32.bat  flash_firmware.bat  install_reaper_bridge.bat  meterbridge_relay.py  package_rc1.bat  package_rc1.ps1  package_rc2.bat  package_rc2_log.txt  preview_themes.py  rc2_manifest.txt  relay_config.txt  requirements.txt  run.bat  run_relay.bat  test_harness.py  test_results.txt  theme_monitor.ps1  uninstall.bat  verify_lufs.py
docs/: copy_screenshots.bat  index.html  push_to_github.bat  screenshots.html
esp32-firmware/: build_and_run.bat  dump_serial.py  fix_pgmspace.py  platformio.ini  start_logger.bat
esp32-firmware/src/: display_config.hpp  lv_conf.h  main.cpp
esp32-firmware/src/network/: udp_comm.h  wifi_manager.h
esp32-firmware/src/ui/: screen_meters.h  screen_settings.h  screen_spectrum.h  theme.h  ui_manager.h
installer/: installer_welcome.rtf  meterbridge.iss
referenceproject/: BUILD_INSTALLER.bat  CHANGELOG.md  INSTALL_REAPER_INTEGRATION.bat  LICENSE.txt  README.md  START.bat  SYNC_TO_BUILD.bat  live_state.json  main.js  package.json  preload.js  test-client.js
referenceproject/.github/workflows/: build.yml
referenceproject/config/: backup.json
referenceproject/installer/: setup.iss
referenceproject/scripts/: StudioBeacon_REAPER_Bridge.lua  __startup_studiobeacon.lua
referenceproject/src/display/: display.css  display.js  index.html
referenceproject/src/fancontrol/: fancontrol-service.js
referenceproject/src/govee/: govee-api.js  govee-service.js
referenceproject/src/settings/: settings.css  settings.html  settings.js
referenceproject/src/utils/: registry-helper.js
release/rc1_22-June-2026/: RELEASE_NOTES.md
release/rc2_23-June-2026/: RELEASE_NOTES.md
release/rc2_23-June-2026/reaper/: meterbridge_reaper_bridge.lua  meterbridge_spectrum.jsfx
scripts/: screen_stream.py
shared/: meterbridge_protocol.h
vst-plugin/: CMakeLists.txt
vst-plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vst-plugin/Source/Metering/: LufsEngine.cpp  LufsEngine.h  MeterValues.h  PeakMeter.cpp  PeakMeter.h  PhaseMeter.cpp  PhaseMeter.h  RmsMeter.cpp  RmsMeter.h
vst-plugin/Source/Network/: Protocol.h  UdpListener.cpp  UdpListener.h  UdpStreamer.cpp  UdpStreamer.h
vst-plugin/Source/ReaperIntegration/: ReaperBridge.cpp  ReaperBridge.h
